2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-slashdot-jp.el (shimbun-make-contents): Bind
	`case-fold-search' to t locally.
	(shimbun-headers): Ditto.

2002-03-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-goto-folder): Follow up
	changes of Mew 3.x.

2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-threshold):
	Change its customize spec.
	(shimbun-slashdot-jp-sid-url): Follow the above change.
	(shimbun-headers): Ditto.
	(shimbun-slashdot-jp-make-comment-headers): Reverse order.
	(shimbun-slashdot-jp-parse-date-string): Fix.

	* shimbun/sb-slashdot-jp.el (shimbun-make-contents): Follow the
	argument spec change of `shimbun-slashdot-jp-make-story-article'.
	(shimbun-slashdot-jp-make-story-article): Not accept the 2nd
	argument.  Use `shimbun-header-xref' instead of
	`shimbun-slashdot-jp-sid-url' when the URL of the article is
	calulated, in order to protect the change of
	`shimbun-slashdot-jp-threshold'.
	(shimbun-slashdot-jp-make-comment-article): Use
	`shimbun-header-xref' instead of `shimbun-slashdot-jp-sid-url' as
	stated above.
	(shimbun-slashdot-jp-search-comment-head): Only when the 4th
	argument is set, references are checked.

2002-02-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-threshold): New
	variable.
	(shimbun-slashdot-jp-sid-url): Refer it.
	(shimbun-slashdot-jp-make-comment-headers): Check all articles.
	(shimbun-slashdot-jp-search-comment-head): The message ID of the
	parent article is also added to References:.

	* shimbun/sb-slashdot-jp.el: All stuffs are rewritten.

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Modified regexp.

2002-02-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-mhonarc.el (shimbun-make-contents): Protect against a
	date string which has both of numerical timezone and country.

2002-02-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
