@@ -48,7 +48,8 @@ egh`b:Uwy`8}#Db-kyCsr_UMRz=,U|>-:&`05lXB4(;h{[&~={Imb-az7\n &U\
 5?|&X_8c;#'L|f.P,]|\\50pgSVw_}byL+%m{TrS[\"Ew;dbskaBL[ipk2m4V")))
 (defvar shimbun-wired-expiration-days 7)
 
-(luna-define-method shimbun-get-group-header-alist ((shimbun shimbun-wired))
+(luna-define-method shimbun-get-group-header-alist ((shimbun shimbun-wired)
+						    &optional range)
   (let ((group-header-alist (mapcar (lambda (g) (cons g nil))
 				    (shimbun-groups-internal shimbun)))
 	(case-fold-search t)
